--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -10,24 +10,46 @@
     		</div>
 
     </div>
-
-<div class="panel panel-default">
-	<div class="panel-heading">
-		<h3 class="panel-title">Films populaires</h3>
-	</div>
-	<div class="panel-body">
-		<div class="row">
-			<div *ngFor="let movie of popularList; let i=index" class="col-md-2">
-				<div *ngIf="i < 6">
-					<img *ngIf="movie.poster_path" class="thumbnail" src="http://image.tmdb.org/t/p/w500/{{movie.poster_path}}">
-					<h4>{{movie.title}}</h4>
-					<p>{{movie.release_date}}</p>
-					<p><a class="btn btn-default" href="#">Voir les détails</a></p>
+	<div *ngIf="searchRes" class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Résultats de recherche</h3>
+		</div>
+		<div class="panel-body">
+			<div class="row">
+				<div *ngFor="let movie of searchRes; let i=index" class="col-md-2">
+					<div *ngIf="i < 18">
+						<img *ngIf="movie.poster_path" class="thumbnail" src="http://image.tmdb.org/t/p/w500/{{movie.poster_path}}">
+						<h4>{{movie.title}}</h4>
+						<p>{{movie.release_date}}</p>
+						<p><a class="btn btn-default" href="#">Voir les détails</a></p>
+					</div>					
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+<hr>
+
+
+
+	<div class="panel panel-default">
+		<div class="panel-heading">
+			<h3 class="panel-title">Films populaires</h3>
+		</div>
+		<div class="panel-body">
+			<div class="row">
+				<div *ngFor="let movie of popularList; let i=index" class="col-md-2">
+					<div *ngIf="i < 6">
+						<img *ngIf="movie.poster_path" class="thumbnail" src="http://image.tmdb.org/t/p/w500/{{movie.poster_path}}">
+						<h4>{{movie.title}}</h4>
+						<p>{{movie.release_date}}</p>
+						<p><a class="btn btn-default" href="#">Voir les détails</a></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+
+
 
 
 <div class="panel panel-default">
